src/objects/Intake__c.object
<CustomObject>
    <description>Allows to create Intake records related to University Courses</description>
    <fields>
        <fullName>Enrollments__c</fullName>
        <label>Enrollments</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <picklist>
            <controllingField>Semester_Study_Period_Term_Trimester__c</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autumn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spring</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Semester_Study_Period_Term_Trimester__c</fullName>
        <label>Period Type</label>
        <picklist>
            <picklistValues>
                <fullName>Semester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Study Period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trimester</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>University_Course__c</fullName>
        <label>University Course</label>
        <referenceTo>UniversityCourse__c</referenceTo>
        <relationshipName>Intakes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Intake</label>
    <nameField>
        <displayFormat>I-{0000000}</displayFormat>
        <label>Intake Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intakes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>